# sample-size-calculator

./: CONTRIBUTING.md  LICENSE  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Alert.tsx  Button.tsx  ListGroup.tsx  ZTestSampleSizeCalculator.tsx
frontend/src/utils/: calculations.ts
src/: App.tsx  Message.tsx  index.css  main.tsx
src/components/: BinarySampleSizeCalculator.tsx  CalculatorContext.tsx  ContinuousCalculatorState.tsx  ContinuousSampleSizeCalculator.tsx  ExpandableContent.tsx  NormalDistributionChart.tsx  ParameterInputCard.tsx  PercentageSlider.tsx  SampleSizeDisplay.tsx  Title.tsx  ZTestSampleSizeCalculator.tsx
src/content/: BinaryCalculatorContent.tsx
src/hooks/: useDrawChart.ts
src/utils/: calculations.ts  chartUtils.ts  debounce.ts  formatNumber.ts
