[tool.poetry]
name = "sample-size-calculator"
version = "0.1.0"
description = "Basic web app for calculating samples sizes for A/B tests"
authors = ["c-abbott <cllmbbtt@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_size_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
